src/objects/CustomObject4__c.object
<CustomObject>
    <fields>
        <fullName>ActionResults__c</fullName>
        <label>行动结果</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>完成</fullName>
                </value>
                <value>
                    <fullName>未完成</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Action__c</fullName>
        <label>动作</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssociativeObjectStage__c</fullName>
        <label>关联对象阶段</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>客户</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>项目进展记录</relationshipLabel>
        <relationshipName>customer6G2a</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <formula>CreatedBy.LfourDepartment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>部门</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndTime__c</fullName>
        <label>结束时间</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Field1__c</fullName>
        <label>拜访方式</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>当面拜访</fullName>
                    <default>true</default>
                    <label>当面拜访</label>
                </value>
                <value>
                    <fullName>电话拜访</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MobileContent__c</fullName>
        <label>行动内容</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>设备安装</fullName>
                </value>
                <value>
                    <fullName>维修维护</fullName>
                </value>
                <value>
                    <fullName>技术服务</fullName>
                </value>
                <value>
                    <fullName>保修谈判</fullName>
                </value>
                <value>
                    <fullName>谈判一家</fullName>
                </value>
                <value>
                    <fullName>送配备件</fullName>
                </value>
                <value>
                    <fullName>上门拜访</fullName>
                </value>
                <value>
                    <fullName>客户培训</fullName>
                </value>
                <value>
                    <fullName>招标投标</fullName>
                </value>
                <value>
                    <fullName>送发票办入库</fullName>
                </value>
                <value>
                    <fullName>安装环境确认</fullName>
                </value>
                <value>
                    <fullName>设备以及</fullName>
                </value>
                <value>
                    <fullName>其他</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PlannedClosingTime__c</fullName>
        <label>计划结束时间</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PlannedTime__c</fullName>
        <label>计划开始时间</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Possessor__c</fullName>
        <formula>CreatedBy.Alias</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>所有者</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SRQ__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>服务请求</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>项目进展记录</relationshipLabel>
        <relationshipName>SRQFSDP</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StartTime__c</fullName>
        <label>开始时间</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>状态</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>未开始</fullName>
                </value>
                <value>
                    <fullName>进行中</fullName>
                </value>
                <value>
                    <fullName>完成</fullName>
                </value>
                <value>
                    <fullName>等待</fullName>
                </value>
                <value>
                    <fullName>取消</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UnfinishedCause__c</fullName>
        <inlineHelpText>选择其他时，请在“存在问题”中描述。</inlineHelpText>
        <label>未完成原因</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>完成</fullName>
                </value>
                <value>
                    <fullName>其他</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Visit_date__c</fullName>
        <label>拜访日期</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Visit_member__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>拜访人员</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>bdJk</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WorkContent__c</fullName>
        <label>工作内容</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>business_chance__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>业务机会</label>
        <referenceTo>chance__c</referenceTo>
        <relationshipName>Project_progress</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>communication_content__c</fullName>
        <label>沟通内容</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>next_step__c</fullName>
        <label>下一步方案</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>项目进展记录</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Visit_date__c</columns>
        <columns>Visit_member__c</columns>
        <columns>business_chance__c</columns>
        <columns>communication_content__c</columns>
        <columns>next_step__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>全部</label>
    </listViews>
    <nameField>
        <displayFormat>{yyyy}-{00}</displayFormat>
        <label>项目进展编号</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>项目进展记录</pluralLabel>
    <recordTypes>
        <fullName>RecordTypeCGxd</fullName>
        <active>false</active>
        <label>常规一般行动</label>
    </recordTypes>
    <recordTypes>
        <fullName>RecordTypeDXXM</fullName>
        <active>true</active>
        <label>大型项目进展记录</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>